CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_XMLSAX "xmlsax" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_LZ4 "lz4" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_ZSTD "zstd" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_KIWI "kiwi" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_BOX2D "box2d" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_OGG "ogg" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_VORBIS "vorbis" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_THEORA "theora" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_ZLIB "zlib" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_SHA1 "sha1" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_UTF8 "utf8" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_GRAPHICS "graphics" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_POLY2TRI "poly2tri" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_CLIPPER2 "Clipper2" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_JPEG "libjpeg" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_WEBP "libwebp" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_SPINE "spine" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_STDEX "stdex" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_KINEFIX "kinefix" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_FE "libfe" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_DAZZLE "dazzle" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_OZZ "ozz" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_LIBMOVIE "libmovie" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_FIGMA "figma" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_JSON "json" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_JANSSON "jansson" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_JPP "jpp" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_PUGIXML "pugixml" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_GOAP "GOAP" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_METABUF "metabuf" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_MATH "libmath" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_TINYINI "tinyini" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_FREETYPE "freetype" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_OPENSSL "openssl" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_PNG "libpng" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_TINYPY "tinypy" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_PYBIND "pybind" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_GLAD "glad" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_GLFW3 "glfw3" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_IMGUI "imgui" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_SENTRY "sentry" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_OPTICK "optick" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_RENDERDOC "renderdoc" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_PILOT "pilot" ON)

PROJECT(Dependencies)

message("============@@##START##@@============")

if(MENGINE_DEPENDENCE_ZLIB)
    message("================zlib================")
    configure_file(${CMAKE_CURRENT_LIST_DIR}/zlib/CMakeLists.txt ${THIRDPARTY_DIR}/zlib/CMakeLists.txt COPYONLY)

    set(ZLIB_BUILD_TESTING OFF CACHE BOOL "ZLIB_BUILD_TESTING" FORCE)
    set(ZLIB_BUILD_SHARED OFF CACHE BOOL "ZLIB_BUILD_SHARED" FORCE)
    set(ZLIB_BUILD_STATIC ON CACHE BOOL "ZLIB_BUILD_STATIC" FORCE)
    set(ZLIB_INSTALL OFF CACHE BOOL "ZLIB_INSTALL" FORCE)
    set(ZLIB_PREFIX OFF CACHE BOOL "ZLIB_PREFIX" FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/zlib ${THIRDPARTY_CONFIG_DIR}/zlib)
    
    if(WIN32)
        set(ZLIB_LIBRARIES zsd CACHE STRING "ZLIB_LIBRARIES" FORCE)
    else()
        set(ZLIB_LIBRARIES z CACHE STRING "ZLIB_LIBRARIES" FORCE)
    endif()
    
    set(ZLIB_INCLUDE_DIRS "${THIRDPARTY_CONFIG_DIR}/zlib" "${THIRDPARTY_DIR}/zlib" CACHE STRING "ZLIB_INCLUDE_DIRS" FORCE)
    
    set(ZLIB_LIBRARY ${ZLIB_LIBRARIES} CACHE STRING "ZLIB_LIBRARIES" FORCE)
    set(ZLIB_INCLUDE_DIR ${ZLIB_INCLUDE_DIRS} CACHE STRING "ZLIB_INCLUDE_DIRS" FORCE)
    
    message("ZLIB_LIBRARIES: ${ZLIB_LIBRARIES}")
    message("ZLIB_INCLUDE_DIRS: ${ZLIB_INCLUDE_DIRS}")
endif()

if(MENGINE_DEPENDENCE_SHA1)
    message("================sha1================")
    set(SHA1_EXTERNAL_BUILD ON CACHE BOOL "SHA1_EXTERNAL_BUILD" FORCE)
    set(SHA1_INSTALL OFF CACHE BOOL "SHA1_INSTALL" FORCE)
    set(SHA1_BUILD_TEST OFF CACHE BOOL "SHA1_BUILD_TEST" FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/sha1 ${THIRDPARTY_CONFIG_DIR}/sha1)
    
    set(SHA1_LIBRARIES sha1 CACHE STRING "SHA1_LIBRARIES" FORCE)
    set(SHA1_INCLUDE_DIRS "${THIRDPARTY_CONFIG_DIR}/sha1" "${THIRDPARTY_DIR}/sha1" CACHE STRING "SHA1_INCLUDE_DIRS" FORCE)
    
    set(SHA1_LIBRARY ${SHA1_LIBRARIES} CACHE STRING "SHA1_LIBRARIES" FORCE)
    set(SHA1_INCLUDE_DIR ${SHA1_INCLUDE_DIRS} CACHE STRING "SHA1_INCLUDE_DIRS" FORCE)
    
    message("SHA1_LIBRARIES: ${SHA1_LIBRARIES}")
    message("SHA1_INCLUDE_DIRS: ${SHA1_INCLUDE_DIRS}")
endif()

if(MENGINE_DEPENDENCE_UTF8)
    message("================utf8================")
    set(UTF8_BUILD_TESTS OFF CACHE BOOL "UTF8_BUILD_TESTS" FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/utf8 ${THIRDPARTY_CONFIG_DIR}/utf8)
    
    set(UTF8_LIBRARIES utf8 CACHE STRING "UTF8_LIBRARIES" FORCE)
    set(UTF8_INCLUDE_DIRS "${THIRDPARTY_CONFIG_DIR}/utf8" "${THIRDPARTY_DIR}/utf8" CACHE STRING "UTF8_INCLUDE_DIRS" FORCE)
    
    set(UTF8_LIBRARY ${UTF8_LIBRARIES} CACHE STRING "UTF8_LIBRARIES" FORCE)
    set(UTF8_INCLUDE_DIR ${UTF8_INCLUDE_DIRS} CACHE STRING "UTF8_INCLUDE_DIRS" FORCE)
    
    message("UTF8_LIBRARIES: ${UTF8_LIBRARIES}")
    message("UTF8_INCLUDE_DIRS: ${UTF8_INCLUDE_DIRS}")
endif()

if(MENGINE_DEPENDENCE_GRAPHICS)
    message("================graphics================")
    
    set(GRAPHICS_EXTERNAL_BUILD ON CACHE BOOL "GRAPHICS_EXTERNAL_BUILD" FORCE)
    set(GRAPHICS_EXAMPLES_BUILD OFF CACHE BOOL "GRAPHICS_EXAMPLES_BUILD" FORCE)
    set(GRAPHICS_INSTALL OFF CACHE BOOL "GRAPHICS_INSTALL" FORCE)
    set(GRAPHICS_TESTS OFF CACHE BOOL "GRAPHICS_TESTS" FORCE)
    set(GRAPHICS_TESTS_IN_SOLUTIONS OFF CACHE BOOL "GRAPHICS_TESTS_IN_SOLUTIONS" FORCE)
    
    IF(MENGINE_RENDER_DIRECTX9)
        set(GRAPHICS_BGRA OFF CACHE BOOL "GRAPHICS_BGRA" FORCE)
    ELSEIF(MENGINE_RENDER_DIRECTX11)
        set(GRAPHICS_BGRA ON CACHE BOOL "GRAPHICS_BGRA" FORCE)
    ELSE()
        set(GRAPHICS_BGRA ON CACHE BOOL "GRAPHICS_BGRA" FORCE)
    ENDIF()
    
    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/graphics ${THIRDPARTY_CONFIG_DIR}/graphics)
endif()

if(MENGINE_DEPENDENCE_JSON)
    message("================json================")
    
    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/json ${THIRDPARTY_CONFIG_DIR}/json)
endif()

if(MENGINE_DEPENDENCE_JANSSON)
    message("================jansson================")
    configure_file(${CMAKE_CURRENT_LIST_DIR}/jansson/CMakeLists.txt ${THIRDPARTY_DIR}/jansson/CMakeLists.txt COPYONLY)
    
    set(JANSSON_BUILD_SHARED_LIBS OFF CACHE BOOL "JANSSON_BUILD_SHARED_LIBS" FORCE)
    set(USE_URANDOM OFF CACHE BOOL "USE_URANDOM" FORCE)
    set(USE_WINDOWS_CRYPTOAPI OFF CACHE BOOL "USE_WINDOWS_CRYPTOAPI" FORCE)
    set(JANSSON_STATIC_CRT ${MENGINE_STATIC_CRT} CACHE BOOL "JANSSON_STATIC_CRT" FORCE)
    set(JANSSON_EXAMPLES OFF CACHE BOOL "JANSSON_EXAMPLES" FORCE)
    set(JANSSON_BUILD_DOCS OFF CACHE BOOL "JANSSON_BUILD_DOCS" FORCE)
    set(JANSSON_WITHOUT_TESTS ON CACHE BOOL "JANSSON_WITHOUT_TESTS" FORCE)
    set(JANSSON_INSTALL OFF CACHE BOOL "JANSSON_INSTALL" FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/jansson ${THIRDPARTY_CONFIG_DIR}/jansson)
    
    set(JANNSON_LIBRARIES ${THIRDPARTY_LIB_DIR}/${MENGINE_LIB_PREFIX}jansson${MENGINE_LIB_SUFFIX} CACHE STRING "JANNSON_LIBRARY" FORCE)
    set(JANSSON_INCLUDE_DIRS "${THIRDPARTY_CONFIG_DIR}/jansson/include" CACHE STRING "JANSSON_INCLUDE_DIRS" FORCE)
    
    set(JANNSON_LIBRARY ${JANNSON_LIBRARIES} CACHE STRING "JANNSON_LIBRARY" FORCE)
    set(JANSSON_INCLUDE_DIR ${JANSSON_INCLUDE_DIRS} CACHE STRING "JANSSON_INCLUDE_DIR" FORCE)
    
    message("JANNSON_LIBRARIES: ${JANNSON_LIBRARIES}")
    message("JANSSON_INCLUDE_DIRS: ${JANSSON_INCLUDE_DIRS}")
endif()

if(MENGINE_DEPENDENCE_DAZZLE)
    message("================dazzle================")
    
    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/dazzle ${THIRDPARTY_CONFIG_DIR}/dazzle)
endif()

if(MENGINE_DEPENDENCE_BOX2D)
    message("================box2d================")
    
    SET(BOX2D_SAMPLES OFF CACHE BOOL "BOX2D_SAMPLES" FORCE)
    SET(BOX2D_BENCHMARKS OFF CACHE BOOL "BOX2D_BENCHMARKS" FORCE)
    SET(BOX2D_DOCS OFF CACHE BOOL "BOX2D_DOCS" FORCE)
    SET(BOX2D_PROFILE OFF CACHE BOOL "BOX2D_PROFILE" FORCE)
    SET(BOX2D_VALIDATE OFF CACHE BOOL "BOX2D_VALIDATE" FORCE)
    SET(BOX2D_UNIT_TESTS OFF CACHE BOOL "BOX2D_UNIT_TESTS" FORCE)
    SET(BOX2D_COMPILE_WARNING_AS_ERROR OFF CACHE BOOL "BOX2D_COMPILE_WARNING_AS_ERROR" FORCE)
    
    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/box2d ${THIRDPARTY_CONFIG_DIR}/box2d)
endif()

if(MENGINE_DEPENDENCE_LZ4)
    message("================lz4================")
    ADD_SUBDIRECTORY(lz4 ${THIRDPARTY_CONFIG_DIR}/lz4)
endif()

if(MENGINE_DEPENDENCE_ZSTD)
    message("================zstd================")

    set(ZSTD_BUILD_STATIC ON CACHE BOOL "ZSTD_BUILD_STATIC" FORCE)
    set(ZSTD_BUILD_SHARED OFF CACHE BOOL "ZSTD_BUILD_SHARED" FORCE)
    set(ZSTD_BUILD_PROGRAMS OFF CACHE BOOL "ZSTD_BUILD_PROGRAMS" FORCE)
    set(ZSTD_BUILD_TESTS OFF CACHE BOOL "ZSTD_BUILD_TESTS" FORCE)
    set(ZSTD_BUILD_CONTRIB OFF CACHE BOOL "ZSTD_BUILD_CONTRIB" FORCE)
    set(ZSTD_MULTITHREAD_SUPPORT OFF CACHE BOOL "ZSTD_MULTITHREAD_SUPPORT" FORCE)
    set(BUILD_TESTING OFF CACHE BOOL "BUILD_TESTING" FORCE)

    if(MSVC)
        set(ZSTD_USE_STATIC_RUNTIME ${MENGINE_STATIC_CRT} CACHE BOOL "ZSTD_USE_STATIC_RUNTIME" FORCE)
    endif()

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/zstd/build/cmake ${THIRDPARTY_CONFIG_DIR}/zstd)

    set_target_properties(libzstd_static PROPERTIES OUTPUT_NAME zstd)

    set(ZSTD_LIBRARIES zstd CACHE STRING "ZSTD_LIBRARIES" FORCE)
    set(ZSTD_INCLUDE_DIRS "${THIRDPARTY_DIR}/zstd/lib" CACHE STRING "ZSTD_INCLUDE_DIRS" FORCE)
    set(ZSTD_LIBRARY ${ZSTD_LIBRARIES} CACHE STRING "ZSTD_LIBRARY" FORCE)
    set(ZSTD_INCLUDE_DIR ${ZSTD_INCLUDE_DIRS} CACHE STRING "ZSTD_INCLUDE_DIR" FORCE)

    message("ZSTD_LIBRARIES: ${ZSTD_LIBRARIES}")
    message("ZSTD_INCLUDE_DIRS: ${ZSTD_INCLUDE_DIRS}")
endif()

if(MENGINE_DEPENDENCE_KIWI)
    message("================kiwi================")

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/kiwi ${THIRDPARTY_CONFIG_DIR}/kiwi)
endif()

if(MENGINE_DEPENDENCE_FIGMA)
    message("================figma================")

    SET(FIGMA_BUILD_BUNDLED_DEPENDENCIES OFF)
    SET(FIGMA_VIEWER OFF)
    SET(FIGMA_TOOLS OFF)
    SET(FIGMA_SDK_LIBRARY_TYPE STATIC)
    SET(FIGMA_SDK_DEPENDENCIES
        graphics
        json
        kiwi
        zlibstatic
        libzstd_static
    )
    SET(FIGMA_SDK_DEPENDENCY_INCLUDE_DIRS
        ${THIRDPARTY_DIR}/graphics/include
        ${THIRDPARTY_DIR}/json/include
    )

    IF(APPLE)
        SET(FIGMA_SDK_COMPILE_DEFINITIONS _LIBCPP_DISABLE_AVAILABILITY)
    ELSE()
        SET(FIGMA_SDK_COMPILE_DEFINITIONS)
    ENDIF()

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/figma ${THIRDPARTY_CONFIG_DIR}/figma)
endif()

if(MENGINE_DEPENDENCE_OGG)
    message("================libogg================")
    configure_file(${CMAKE_CURRENT_LIST_DIR}/libogg/Modified/os_types.h ${THIRDPARTY_DIR}/libogg/include/ogg/os_types.h COPYONLY)

    SET(BUILD_SHARED_LIBS OFF CACHE BOOL "BUILD_SHARED_LIBS" FORCE)
    SET(INSTALL_DOCS OFF CACHE BOOL "BUILD_SHARED_LIBS" FORCE)
    SET(INSTALL_PKG_CONFIG_MODULE OFF CACHE BOOL "INSTALL_PKG_CONFIG_MODULE" FORCE)
    SET(INSTALL_CMAKE_PACKAGE_MODULE OFF CACHE BOOL "INSTALL_CMAKE_PACKAGE_MODULE" FORCE)
    SET(BUILD_TESTING OFF CACHE BOOL "INSTALL_CMAKE_PACKAGE_MODULE" FORCE)
    
    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/libogg ${THIRDPARTY_CONFIG_DIR}/libogg)
    
    set(OGG_LIBRARIES ogg CACHE STRING "OGG_LIBRARIES" FORCE)
    set(OGG_INCLUDE_DIRS "${THIRDPARTY_CONFIG_DIR}/libogg/include" "${THIRDPARTY_DIR}/libogg/include" CACHE STRING "OGG_INCLUDE_DIRS" FORCE)
    
    set(OGG_LIBRARY ${OGG_LIBRARIES} CACHE STRING "OGG_LIBRARY" FORCE)
    set(OGG_INCLUDE_DIR ${OGG_INCLUDE_DIRS} CACHE STRING "OGG_INCLUDE_DIR" FORCE)
    
    message("OGG_LIBRARIES: ${OGG_LIBRARIES}")
    message("OGG_INCLUDE_DIRS: ${OGG_INCLUDE_DIRS}")
endif()

if(MENGINE_DEPENDENCE_VORBIS)
    message("================libvorbis================")
    configure_file(${CMAKE_CURRENT_LIST_DIR}/libvorbis/CMakeLists.txt ${THIRDPARTY_DIR}/libvorbis/CMakeLists.txt COPYONLY)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/libvorbis ${THIRDPARTY_CONFIG_DIR}/libvorbis)
endif()

if(MENGINE_DEPENDENCE_THEORA)
    message("================libtheora================")
    configure_file(${CMAKE_CURRENT_LIST_DIR}/libtheora/lib/encoder_disabled.c ${THIRDPARTY_DIR}/libtheora/lib/encoder_disabled.c COPYONLY)
    
    ADD_SUBDIRECTORY(libtheora ${THIRDPARTY_CONFIG_DIR}/libtheora)
endif()


if(MENGINE_DEPENDENCE_POLY2TRI)
    message("================poly2tri================")
    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/poly2tri ${THIRDPARTY_CONFIG_DIR}/poly2tri)
endif()

if(MENGINE_DEPENDENCE_CLIPPER2)
    message("================Clipper2================")
    SET(CLIPPER2_UTILS OFF CACHE BOOL "CLIPPER2_UTILS" FORCE)
    SET(CLIPPER2_EXAMPLES OFF CACHE BOOL "CLIPPER2_EXAMPLES" FORCE)
    SET(CLIPPER2_TESTS OFF CACHE BOOL "CLIPPER2_TESTS" FORCE)
    
    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/Clipper2/CPP ${THIRDPARTY_CONFIG_DIR}/Clipper2)
endif()

if(MENGINE_DEPENDENCE_PNG)
    message("================libpng================")
    set(PNG_BUILD_ZLIB OFF CACHE BOOL "PNG_BUILD_ZLIB" FORCE)
    set(PNG_SHARED OFF CACHE BOOL "PNG_SHARED" FORCE)
    set(PNG_STATIC ON CACHE BOOL "PNG_STATIC" FORCE)
    set(PNG_TESTS OFF CACHE BOOL "PNG_TESTS" FORCE)
	set(PNG_TOOLS OFF CACHE BOOL "PNG_TOOLS" FORCE)
    set(PNG_FRAMEWORK OFF CACHE BOOL "PNG_FRAMEWORK" FORCE)
    set(PNG_DEBUG OFF CACHE BOOL "PNG_DEBUG" FORCE)
    set(PNGARG OFF CACHE BOOL "PNGARG" FORCE)
    
    set(PNG_HARDWARE_OPTIMIZATIONS ON CACHE BOOL "PNG_HARDWARE_OPTIMIZATIONS" FORCE)
    set(SKIP_INSTALL_ALL ON CACHE BOOL "SKIP_INSTALL_ALL" FORCE)
    
    set(PNG_STATIC_OUTPUT_NAME "png" CACHE STRING "PNG_STATIC_OUTPUT_NAME" FORCE)
    set(PNG_DEBUG_POSTFIX "" CACHE STRING "PNG_DEBUG_POSTFIX" FORCE)
    
    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/libpng ${THIRDPARTY_CONFIG_DIR}/libpng)
    add_dependencies(png_static zlibstatic)
    
    if(UNIX)
        set(PNG_LIBRARIES ${CMAKE_STATIC_LIBRARY_PREFIX}png16${MENGINE_LIB_SUFFIX} CACHE STRING "PNG_LIBRARIES" FORCE)
    else()
        set(PNG_LIBRARIES libpng16_static${MENGINE_LIB_SUFFIX} CACHE STRING "PNG_LIBRARIES" FORCE)
    endif()
    
    set(PNG_INCLUDE_DIRS "${THIRDPARTY_CONFIG_DIR}/libpng" "${THIRDPARTY_DIR}/libpng" CACHE STRING "PNG_INCLUDE_DIRS" FORCE)
    
    set(PNG_LIBRARY ${PNG_LIBRARIES} CACHE STRING "PNG_LIBRARY" FORCE)
    set(PNG_INCLUDE_DIR ${PNG_INCLUDE_DIRS} CACHE STRING "PNG_INCLUDE_DIR" FORCE)
        
    message("PNG_LIBRARIES: ${PNG_LIBRARIES}")
    message("PNG_INCLUDE_DIRS: ${PNG_INCLUDE_DIRS}")
endif()

if(MENGINE_DEPENDENCE_JPEG)
    message("================libjpeg================")
    ADD_SUBDIRECTORY(libjpeg ${THIRDPARTY_CONFIG_DIR}/libjpeg)
    
    set(JPEG_LIBRARIES ${MENGINE_LIB_PREFIX}jpeg${MENGINE_DEPENDENCIES_DEBUG_SUFFIX}${MENGINE_LIB_SUFFIX} CACHE STRING "JPEG_LIBRARIES" FORCE)    
    set(JPEG_INCLUDE_DIRS "${THIRDPARTY_CONFIG_DIR}/libjpeg" "${THIRDPARTY_DIR}/libjpeg" CACHE STRING "JPEG_INCLUDE_DIRS" FORCE)
    
    set(JPEG_LIBRARY ${JPEG_LIBRARIES} CACHE STRING "JPEG_LIBRARY" FORCE)
    set(JPEG_INCLUDE_DIR ${JPEG_INCLUDE_DIRS} CACHE STRING "JPEG_INCLUDE_DIR" FORCE)
    
    message("JPEG_LIBRARIES: ${JPEG_LIBRARIES}")
    message("JPEG_INCLUDE_DIRS: ${JPEG_INCLUDE_DIRS}")
endif()


if(MENGINE_DEPENDENCE_XMLSAX)
    message("================xmlsax================")
    set(XMLSAX_EXTERNAL_BUILD ON CACHE BOOL "XMLSAX_EXTERNAL_BUILD" FORCE)
    set(XMLSAX_INSTALL OFF CACHE BOOL "XMLSAX_INSTALL" FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/xmlsax ${THIRDPARTY_CONFIG_DIR}/xmlsax)
endif()

if(MENGINE_DEPENDENCE_WEBP)
    message("================libwebp================")
    set(WEBP_LINK_STATIC ON CACHE BOOL "Link using static libraries. If OFF, use dynamic libraries." FORCE)
    set(WEBP_ENABLE_SIMD ON CACHE BOOL "Enable any SIMD optimization." FORCE)
    set(WEBP_BUILD_ANIM_UTILS OFF CACHE BOOL "WEBP_BUILD_ANIM_UTILS" FORCE)
    set(WEBP_BUILD_CWEBP OFF CACHE BOOL "Build the cwebp command line tool." FORCE)
    set(WEBP_BUILD_DWEBP OFF CACHE BOOL "Build the dwebp command line tool." FORCE)
    set(WEBP_BUILD_GIF2WEBP OFF CACHE BOOL "Build the gif2webp conversion tool." FORCE)
    set(WEBP_BUILD_IMG2WEBP OFF CACHE BOOL "Build the img2webp animation tool." FORCE)
    set(WEBP_BUILD_VWEBP OFF CACHE BOOL "Build the vwebp viewer tool." FORCE)
    set(WEBP_BUILD_WEBPINFO OFF CACHE BOOL "Build the webpinfo command line tool." FORCE)
    set(WEBP_BUILD_LIBWEBPMUX OFF CACHE BOOL "Build the libwebpmux library." FORCE)
    set(WEBP_BUILD_WEBPMUX OFF CACHE BOOL "Build the webpinfo command line tool." FORCE)
    set(WEBP_BUILD_EXTRAS OFF CACHE BOOL "Build extras." FORCE)
    set(WEBP_BUILD_WEBP_JS OFF CACHE BOOL "Emscripten build of webp.js" FORCE)
    set(WEBP_BUILD_FUZZTEST OFF CACHE BOOL "Build the fuzztest tests." FORCE)
    set(WEBP_USE_THREAD OFF CACHE BOOL "Enable threading support" FORCE)
    set(WEBP_NEAR_LOSSLESS OFF CACHE BOOL "Enable near-lossless encoding" FORCE)
    set(WEBP_ENABLE_SWAP_16BIT_CSP OFF CACHE BOOL "Enable byte swap for 16 bit colorspaces." FORCE)
    set(WEBP_ENABLE_WUNUSED_RESULT OFF CACHE BOOL "Add [[nodiscard]] to some functions. CMake must be at least 3.21 to force C23" FORCE)
    set(WEBP_UNICODE OFF CACHE BOOL "Build Unicode executables." FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/libwebp ${THIRDPARTY_CONFIG_DIR}/libwebp)
endif()

if(MENGINE_DEPENDENCE_SPINE)
    message("================spine================")
    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/spine/spine-c ${THIRDPARTY_CONFIG_DIR}/spine-c)
endif() 

if(MENGINE_DEPENDENCE_STDEX)
    message("================stdex================")
    set(STDEX_EXTERNAL_BUILD ON CACHE BOOL "STDEX_EXTERNAL_BUILD" FORCE)
    set(STDEX_INSTALL OFF CACHE BOOL "STDEX_EXTERNAL_BUILD" FORCE)
    set(STDEX_DBGHELP_INCLUDE "${MENGINE_REPOSITORY}/src/Environment/Windows" CACHE STRING "STDEX_DBGHELP_INCLUDE" FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/stdex ${THIRDPARTY_CONFIG_DIR}/stdex)
endif()

if(MENGINE_DEPENDENCE_KINEFIX)
    message("================kinefix================")
    set(KINEFIX_BUILD_TESTS OFF CACHE BOOL "KINEFIX_BUILD_TESTS" FORCE)
    set(KINEFIX_INSTALL OFF CACHE BOOL "KINEFIX_INSTALL" FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/kinefix ${THIRDPARTY_CONFIG_DIR}/kinefix)
endif()

if(MENGINE_DEPENDENCE_FE)
    message("================libfe================")
    set(FE_EXTERNAL_BUILD ON CACHE BOOL "FE_EXTERNAL_BUILD" FORCE)
    set(FE_TEST_BUILD OFF CACHE BOOL "FE_TEST_BUILD" FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/libfe ${THIRDPARTY_CONFIG_DIR}/libfe)
endif()

if(MENGINE_DEPENDENCE_OZZ)
message("================ozz================")
    set(ozz_build_tools OFF CACHE BOOL "ozz_build_tools" FORCE)
    set(ozz_build_fbx OFF CACHE BOOL "ozz_build_fbx" FORCE)
    set(ozz_build_gltf OFF CACHE BOOL "ozz_build_gltf" FORCE)
    set(ozz_build_data OFF CACHE BOOL "ozz_build_data" FORCE)
    set(ozz_build_samples OFF CACHE BOOL "ozz_build_samples" FORCE)
    set(ozz_build_howtos OFF CACHE BOOL "ozz_build_howtos" FORCE)
    set(ozz_build_tests OFF CACHE BOOL "ozz_build_tests" FORCE)
    set(ozz_build_simd_ref OFF CACHE BOOL "ozz_build_simd_ref" FORCE)
    set(ozz_build_cpp11 ON CACHE BOOL "ozz_build_cpp11" FORCE)
    set(ozz_build_msvc_rt_dll ${MENGINE_DYNAMIC_CRT} CACHE BOOL "ozz_build_msvc_rt_dll" FORCE)
    set(ozz_build_postfix OFF CACHE BOOL "ozz_build_postfix" FORCE)
    set(ozz_run_tests_headless OFF CACHE BOOL "ozz_run_tests_headless" FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/ozz ${THIRDPARTY_CONFIG_DIR}/ozz)
endif()

if(MENGINE_DEPENDENCE_LIBMOVIE)
    message("================libmovie================")
    set(LIBMOVIE_EXTERNAL_BUILD ON CACHE BOOL "LIBMOVIE_EXTERNAL_BUILD" FORCE)
    set(LIBMOVIE_EXAMPLES_BUILD OFF CACHE BOOL "LIBMOVIE_EXAMPLES_BUILD" FORCE)
    set(LIBMOVIE_COVERAGE OFF CACHE BOOL "LIBMOVIE_COVERAGE" FORCE)
    set(LIBMOVIE_INSTALL OFF CACHE BOOL "LIBMOVIE_INSTALL" FORCE)
    set(LIBMOVIE_TEST OFF CACHE BOOL "LIBMOVIE_TEST" FORCE)
    set(LIBMOVIE_MEMORY_DEBUG OFF CACHE BOOL "LIBMOVIE_MEMORY_DEBUG" FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/libmovie ${THIRDPARTY_CONFIG_DIR}/libmovie)
endif()

if(MENGINE_DEPENDENCE_JPP)
    message("================jpp================")
    set(JPP_EXTERNAL_BUILD ON CACHE BOOL "JPP_EXTERNAL_BUILD" FORCE)
    set(JPP_JANSSON_INCLUDE_PATH ${JANSSON_INCLUDE_DIRS} CACHE STRING "JPP_JANSSON_INCLUDE_PATH" FORCE)
    set(JPP_TEST OFF CACHE BOOL "JPP_TEST" FORCE)
    set(JPP_INSTALL OFF CACHE BOOL "JPP_INSTALL" FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/jpp ${THIRDPARTY_CONFIG_DIR}/jpp)
    add_dependencies(jpp jansson)
endif()

if(MENGINE_DEPENDENCE_PUGIXML)
    message("================pugixml================")
    set(PUGIXML_USE_VERSIONED_LIBDIR OFF CACHE BOOL "Use a private subdirectory to install the headers and libraries" FORCE)
    set(PUGIXML_USE_POSTFIX OFF CACHE BOOL "Use separate postfix for each configuration to make sure you can install multiple build outputs" FORCE)
    
    if(MENGINE_TOOLCHAIN_MSVC)
        set(PUGIXML_STATIC_CRT ${MENGINE_STATIC_CRT} CACHE BOOL "Use static MSVC RT libraries" FORCE)
    endif()
    
    set(PUGIXML_BUILD_TESTS OFF CACHE BOOL "Build pugixml tests" FORCE)
    set(PUGIXML_BUILD_SHARED_AND_STATIC_LIBS OFF CACHE BOOL "Build both shared and static libraries" FORCE)
    
    set(PUGIXML_WCHAR_MODE OFF CACHE BOOL "Enable wchar_t mode" FORCE)
    set(PUGIXML_COMPACT ON CACHE BOOL "Enable compact mode" FORCE)
    set(PUGIXML_INSTALL OFF CACHE BOOL "Enable installation rules" FORCE)
    
    set(PUGIXML_NO_XPATH ON CACHE BOOL "Disable XPath" FORCE)
    set(PUGIXML_NO_STL ON CACHE BOOL "Disable STL" FORCE)
    set(PUGIXML_NO_EXCEPTIONS ON CACHE BOOL "Disable Exceptions" FORCE)
    
    if (APPLE)
        set(PUGIXML_BUILD_APPLE_FRAMEWORK OFF CACHE BOOL "Build as Apple Frameworks" FORCE)
    endif()

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/pugixml ${THIRDPARTY_CONFIG_DIR}/pugixml)
endif()

if(MENGINE_DEPENDENCE_GOAP)
    message("================GOAP================")
    set(LIBGOAP_EXTERNAL_BUILD ON CACHE BOOL "LIBGOAP_EXTERNAL_BUILD" FORCE)
    set(LIBGOAP_BUILD_TEST OFF CACHE BOOL "LIBGOAP_BUILD_TEST" FORCE)
    set(LIBGOAP_EXTERNAL_CONFIG_INCLUDE ON CACHE BOOL "LIBGOAP_EXTERNAL_CONFIG_INCLUDE" FORCE)
    set(LIBGOAP_EXTERNAL_CONFIG_INCLUDE_PATH ${THIRDPARTY_DIR}/stdex/include ${CMAKE_CURRENT_LIST_DIR}/GOAP/Config CACHE STRING "LIBGOAP_EXTERNAL_CONFIG_INCLUDE_PATH" FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/GOAP ${THIRDPARTY_CONFIG_DIR}/GOAP)
endif()

if(MENGINE_DEPENDENCE_METABUF)
    message("================metabuf================")
    set(METABUF_EXTERNAL_BUILD ON CACHE BOOL "METABUF_EXTERNAL_BUILD" FORCE)
    set(METABUF_TEST OFF CACHE BOOL "METABUF_TEST" FORCE)
    set(METABUF_METAGEN OFF CACHE BOOL "METABUF_METAGEN" FORCE)
    set(METABUF_XML2METABUF ON CACHE BOOL "METABUF_XML2METABUF" FORCE)

    SET(METABUF_PUGIXML_EXTERNAL ON CACHE BOOL "METABUF_PUGIXML_EXTERNAL" FORCE)
    SET(METABUF_PUGIXML_INCLUDE_DIRS "${THIRDPARTY_DIR}/pugixml/src" CACHE STRING "METABUF_PUGIXML_INCLUDE_DIRS" FORCE)
    SET(METABUF_PUGIXML_LIBRARIES ${THIRDPARTY_LIB_DIR}/${MENGINE_LIB_PREFIX}pugixml${MENGINE_LIB_SUFFIX} CACHE STRING "METABUF_PUGIXML_LIBRARIES" FORCE)
    SET(METABUF_EXTERNAL_CONFIG ON CACHE BOOL "METABUF_EXTERNAL_CONFIG" FORCE)

    configure_file(${CMAKE_CURRENT_LIST_DIR}/metabuf/Metaexternalconfig.hpp ${THIRDPARTY_DIR}/metabuf/include/config/Metaexternalconfig.hpp COPYONLY)
    
    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/metabuf ${THIRDPARTY_CONFIG_DIR}/metabuf)
    add_dependencies(metabuf pugixml)
endif()

if(MENGINE_DEPENDENCE_MATH)
    message("================libmath================")
    set(LIBMATH_EXTERNAL_BUILD ON CACHE BOOL "LIBMATH_EXTERNAL_BUILD" FORCE)
    set(LIBMATH_EXAMPLES_BUILD OFF CACHE BOOL "LIBMATH_EXAMPLES_BUILD" FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/libmath ${THIRDPARTY_CONFIG_DIR}/libmath)
endif()

if(MENGINE_DEPENDENCE_TINYINI)
    message("================tinyini================")
    set(TINYINI_EXTERNAL_BUILD ON CACHE BOOL "TINYINI_EXTERNAL_BUILD" FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/tinyini ${THIRDPARTY_CONFIG_DIR}/tinyini)
endif()

if(MENGINE_DEPENDENCE_FREETYPE)
    message("================freetype================")
    configure_file(${CMAKE_CURRENT_LIST_DIR}/freetype/CMakeLists.txt ${THIRDPARTY_DIR}/freetype/CMakeLists.txt COPYONLY)
    configure_file(${CMAKE_CURRENT_LIST_DIR}/freetype/ftstdlib.h ${THIRDPARTY_DIR}/freetype/include/freetype/config/ftstdlib.h COPYONLY)
    
    set(SKIP_INSTALL_ALL ON CACHE BOOL "SKIP_INSTALL_ALL" FORCE)
    set(DISABLE_FORCE_DEBUG_POSTFIX ON CACHE BOOL "DISABLE_FORCE_DEBUG_POSTFIX" FORCE)
    set(BUILD_SHARED_LIBS OFF CACHE BOOL "BUILD_SHARED_LIBS" FORCE)

    if(MENGINE_TARGET_IOS OR MENGINE_TARGET_IOS_SIMULATOR)
        set(IOS_PLATFORM "OS" CACHE STRING "IOS_PLATFORM" FORCE)
    endif()

    set(FT_WITH_ZLIB OFF CACHE BOOL "FT_WITH_ZLIB" FORCE)
    set(FT_WITH_BZIP2 OFF CACHE BOOL "FT_WITH_BZIP2" FORCE)
    set(FT_WITH_PNG OFF CACHE BOOL "FT_WITH_PNG" FORCE)
    set(FT_WITH_HARFBUZZ OFF CACHE BOOL "FT_WITH_HARFBUZZ" FORCE)
    set(FT_WITH_BROTLI OFF CACHE BOOL "FT_WITH_BROTLI" FORCE)
    
    set(CMAKE_DISABLE_FIND_PACKAGE_ZLIB_OLD ${CMAKE_DISABLE_FIND_PACKAGE_ZLIB})
    set(CMAKE_DISABLE_FIND_PACKAGE_BZip2_OLD ${CMAKE_DISABLE_FIND_PACKAGE_BZip2})
    set(CMAKE_DISABLE_FIND_PACKAGE_PNG_OLD ${CMAKE_DISABLE_FIND_PACKAGE_PNG})
    set(CMAKE_DISABLE_FIND_PACKAGE_HarfBuzz_OLD ${CMAKE_DISABLE_FIND_PACKAGE_HarfBuzz})
    set(CMAKE_DISABLE_FIND_PACKAGE_BrotliDec_OLD ${CMAKE_DISABLE_FIND_PACKAGE_BrotliDec})
    
    set(CMAKE_DISABLE_FIND_PACKAGE_ZLIB ON CACHE BOOL "CMAKE_DISABLE_FIND_PACKAGE_ZLIB" FORCE)
    set(CMAKE_DISABLE_FIND_PACKAGE_BZip2 ON CACHE BOOL "CMAKE_DISABLE_FIND_PACKAGE_BZip2" FORCE)
    set(CMAKE_DISABLE_FIND_PACKAGE_PNG ON CACHE BOOL "CMAKE_DISABLE_FIND_PACKAGE_PNG" FORCE)
    set(CMAKE_DISABLE_FIND_PACKAGE_HarfBuzz ON CACHE BOOL "CMAKE_DISABLE_FIND_PACKAGE_HarfBuzz" FORCE)
    set(CMAKE_DISABLE_FIND_PACKAGE_BrotliDec ON CACHE BOOL "CMAKE_DISABLE_FIND_PACKAGE_BrotliDec" FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/freetype ${THIRDPARTY_CONFIG_DIR}/freetype)
    
    set(CMAKE_DISABLE_FIND_PACKAGE_ZLIB ${CMAKE_DISABLE_FIND_PACKAGE_ZLIB_OLD} CACHE BOOL "CMAKE_DISABLE_FIND_PACKAGE_ZLIB" FORCE)
    set(CMAKE_DISABLE_FIND_PACKAGE_BZip2 ${CMAKE_DISABLE_FIND_PACKAGE_BZip2_OLD} CACHE BOOL "CMAKE_DISABLE_FIND_PACKAGE_BZip2" FORCE)
    set(CMAKE_DISABLE_FIND_PACKAGE_PNG ${CMAKE_DISABLE_FIND_PACKAGE_PNG_OLD} CACHE BOOL "CMAKE_DISABLE_FIND_PACKAGE_PNG" FORCE)
    set(CMAKE_DISABLE_FIND_PACKAGE_HarfBuzz ${CMAKE_DISABLE_FIND_PACKAGE_HarfBuzz_OLD} CACHE BOOL "CMAKE_DISABLE_FIND_PACKAGE_HarfBuzz" FORCE)
    set(CMAKE_DISABLE_FIND_PACKAGE_BrotliDec ${CMAKE_DISABLE_FIND_PACKAGE_BrotliDec_OLD} CACHE BOOL "CMAKE_DISABLE_FIND_PACKAGE_BrotliDec" FORCE)
    
    add_dependencies(freetype zlibstatic)
    
    if(MENGINE_TARGET_IOS OR MENGINE_TARGET_IOS)
        unset(IOS_PLATFORM CACHE)
    endif()
endif()

if(MENGINE_TARGET_WINDOWS OR MENGINE_TARGET_UNIX)
    if(MENGINE_DEPENDENCE_SENTRY)
        message("================sentry================")

        set(SENTRY_BUILD_SHARED_LIBS OFF CACHE BOOL "SENTRY_BUILD_SHARED_LIBS" FORCE)
        set(SENTRY_BUILD_TESTS OFF CACHE BOOL "SENTRY_BUILD_TESTS" FORCE)
        set(SENTRY_BUILD_EXAMPLES OFF CACHE BOOL "SENTRY_BUILD_EXAMPLES" FORCE)
        set(SENTRY_ENABLE_INSTALL OFF CACHE BOOL "SENTRY_ENABLE_INSTALL" FORCE)
        set(SENTRY_INTEGRATION_QT OFF CACHE BOOL "SENTRY_INTEGRATION_QT" FORCE)
        set(CRASHPAD_ZLIB_SYSTEM OFF CACHE BOOL "CRASHPAD_ZLIB_SYSTEM" FORCE)
        
        if(MSVC)
            set(SENTRY_BUILD_RUNTIMESTATIC ${MENGINE_STATIC_CRT} CACHE BOOL "SENTRY_BUILD_RUNTIMESTATIC" FORCE)
        endif()
        
        ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/sentry ${THIRDPARTY_CONFIG_DIR}/sentry)
    endif()
endif()

if(MENGINE_TARGET_WINDOWS AND MENGINE_TOOLCHAIN_MSVC)
    if(MENGINE_DEPENDENCE_OPTICK)
        message("================optick================")
        configure_file(${CMAKE_CURRENT_LIST_DIR}/optick/CMakeLists.txt ${THIRDPARTY_DIR}/optick/CMakeLists.txt COPYONLY)

        set(OPTICK_ENABLED ON CACHE BOOL "OPTICK_ENABLED" FORCE)
        set(OPTICK_INSTALL_TARGETS OFF CACHE BOOL "OPTICK_INSTALL_TARGETS" FORCE)
        set(OPTICK_USE_VULKAN OFF CACHE BOOL "OPTICK_USE_VULKAN" FORCE)
        set(OPTICK_USE_D3D12 OFF CACHE BOOL "OPTICK_USE_D3D12" FORCE)
        set(OPTICK_BUILD_GUI_APP OFF CACHE BOOL "OPTICK_USE_D3D12" FORCE)
        set(OPTICK_BUILD_CONSOLE_SAMPLE OFF CACHE BOOL "OPTICK_USE_D3D12" FORCE)

        ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/optick ${THIRDPARTY_CONFIG_DIR}/optick)
    endif()
endif()

if(MENGINE_DEPENDENCE_TINYPY)
    message("================tinypy================")
    set(BUILD_TESTING OFF CACHE BOOL "BUILD_TESTING" FORCE)
    set(TINYPY_BUILD_CLI OFF CACHE BOOL "TINYPY_BUILD_CLI" FORCE)
    set(TINYPY_WARNINGS_AS_ERRORS OFF CACHE BOOL "TINYPY_WARNINGS_AS_ERRORS" FORCE)

    if(MENGINE_TINYPY_SOURCE_DIR)
        set(TINYPY_SOURCE_DIR "${MENGINE_TINYPY_SOURCE_DIR}")
    else()
        set(TINYPY_SOURCE_DIR "${THIRDPARTY_DIR}/tinypy")
    endif()

    ADD_SUBDIRECTORY(${TINYPY_SOURCE_DIR} ${THIRDPARTY_CONFIG_DIR}/tinypy)
endif()

if(MENGINE_DEPENDENCE_PYBIND)
    message("================pybind================")
    set(PYBIND_PROJECT_NAME "pybind" CACHE STRING "PYBIND_PROJECT_NAME" FORCE)
    set(PYBIND_EXTERNAL_BUILD ON CACHE BOOL "PYBIND_EXTERNAL_BUILD" FORCE)
    set(PYBIND_STDEX_INCLUDE_PATH "${THIRDPARTY_DIR}/stdex/include" CACHE STRING "PYBIND_STDEX_INCLUDE_PATH" FORCE)
    set(PYBIND_STL_NOT_SUPPORT ON CACHE BOOL "PYBIND_STL_NOT_SUPPORT" FORCE)
    set(PYBIND_INSTALL OFF CACHE BOOL "PYBIND_INSTALL" FORCE)
    set(PYBIND_SANDBOX OFF CACHE BOOL "PYBIND_SANDBOX" FORCE)
    set(PYBIND_BACKEND "tinypy" CACHE STRING "PYBIND_BACKEND" FORCE)
    if(MENGINE_TINYPY_SOURCE_DIR)
        set(PYBIND_TINYPY_SOURCE_DIR "${MENGINE_TINYPY_SOURCE_DIR}" CACHE PATH "PYBIND_TINYPY_SOURCE_DIR" FORCE)
    else()
        set(PYBIND_TINYPY_SOURCE_DIR "${THIRDPARTY_DIR}/tinypy" CACHE PATH "PYBIND_TINYPY_SOURCE_DIR" FORCE)
    endif()

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/pybind ${THIRDPARTY_CONFIG_DIR}/pybind)
endif()

if(MENGINE_DEPENDENCE_IMGUI)
    message("================imgui================")
    ADD_SUBDIRECTORY(imgui ${THIRDPARTY_CONFIG_DIR}/imgui)
endif()

if(MENGINE_TARGET_WINDOWS)
    if(MENGINE_TOOLCHAIN_MSVC)
        if(MENGINE_DEPENDENCE_OPENSSL)
            message("================openssl================")
            
            set(WITH_APPS OFF CACHE BOOL "WITH_APPS" FORCE)
            set(MSVC_DYNAMIC_RUNTIME ${MENGINE_DYNAMIC_CRT} CACHE BOOL "MSVC_DYNAMIC_RUNTIME" FORCE)
            
            ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/openssl ${THIRDPARTY_CONFIG_DIR}/openssl)
            
            set(OPENSSL_ROOT_DIR ${THIRDPARTY_DIR}/openssl CACHE STRING "OPENSSL_ROOT_DIR" FORCE)
            set(OPENSSL_SSL_LIBRARIES ${THIRDPARTY_LIB_DIR} CACHE STRING "OPENSSL_SSL_LIBRARIES" FORCE)
            set(OPENSSL_SSL_LIBRARY ${OPENSSL_SSL_LIBRARIES} CACHE STRING "OPENSSL_SSL_LIBRARY" FORCE)
            set(OPENSSL_CRYPTO_LIBRARIES ${THIRDPARTY_LIB_DIR} CACHE STRING "OPENSSL_CRYPTO_LIBRARIES" FORCE)
            set(OPENSSL_CRYPTO_LIBRARY ${OPENSSL_CRYPTO_LIBRARIES} CACHE STRING "OPENSSL_CRYPTO_LIBRARY" FORCE)
            set(OPENSSL_LIBDIR ${THIRDPARTY_LIB_DIR} CACHE STRING "OPENSSL_LIBDIR" FORCE)
            set(OPENSSL_LIBRARIES libssl_1_1.a libcrypto_1_1.a CACHE STRING "OPENSSL_LIBRARIES" FORCE)
            set(OPENSSL_INCLUDE_DIRS "${THIRDPARTY_CONFIG_DIR}/openssl/include" CACHE STRING "OPENSSL_INCLUDE_DIRS" FORCE)
            set(OPENSSL_INCLUDE_DIR ${OPENSSL_INCLUDE_DIRS} CACHE STRING "OPENSSL_INCLUDE_DIR" FORCE)
            set(OPENSSL_USE_STATIC_LIBS ON CACHE BOOL "OPENSSL_USE_STATIC_LIBS" FORCE)
            
            message("OPENSSL_ROOT_DIR: ${OPENSSL_ROOT_DIR}")
            message("OPENSSL_SSL_LIBRARIES: ${OPENSSL_SSL_LIBRARIES}")
            message("OPENSSL_CRYPTO_LIBRARIES: ${OPENSSL_CRYPTO_LIBRARIES}")
            message("OPENSSL_LIBDIR: ${OPENSSL_LIBDIR}")
            message("OPENSSL_LIBRARIES: ${OPENSSL_LIBRARIES}")
            message("OPENSSL_INCLUDE_DIRS: ${OPENSSL_INCLUDE_DIRS}")
            message("OPENSSL_USE_STATIC_LIBS: ${OPENSSL_USE_STATIC_LIBS}")
        endif()
    endif()
    
    if(MENGINE_DEPENDENCE_GLFW3)
        message("================glfw3================")
        set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "GLFW_BUILD_EXAMPLES" FORCE)
        set(GLFW_BUILD_TESTS OFF CACHE BOOL "GLFW_BUILD_TESTS" FORCE)
        set(GLFW_BUILD_DOCS OFF CACHE BOOL "GLFW_BUILD_DOCS" FORCE)
        set(GLFW_INSTAL OFF CACHE BOOL "GLFW_INSTAL" FORCE)
        set(GLFW_VULKAN_STATIC OFF CACHE BOOL "GLFW_VULKAN_STATIC" FORCE)
        set(USE_MSVC_RUNTIME_LIBRARY_DLL ${MENGINE_DYNAMIC_CRT} CACHE BOOL "USE_MSVC_RUNTIME_LIBRARY_DLL" FORCE)

        ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/glfw3 ${THIRDPARTY_CONFIG_DIR}/glfw3)
    endif()
    
    if(MENGINE_DEPENDENCE_PILOT)
        message("================pilot================")

        set(WINPILOT_BUILD_EXAMPLE OFF CACHE BOOL "WINPILOT_BUILD_EXAMPLE" FORCE)

        ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/pilot ${THIRDPARTY_CONFIG_DIR}/pilot)

        set(PILOT_LIBRARIES winpilot CACHE STRING "PILOT_LIBRARIES" FORCE)
        set(PILOT_INCLUDE_DIRS "${THIRDPARTY_DIR}/pilot/include" CACHE STRING "PILOT_INCLUDE_DIRS" FORCE)

        message("PILOT_LIBRARIES: ${PILOT_LIBRARIES}")
        message("PILOT_INCLUDE_DIRS: ${PILOT_INCLUDE_DIRS}")
    endif()
endif()

if(MENGINE_TARGET_WINDOWS OR MENGINE_TARGET_UNIX)
    if(MENGINE_DEPENDENCE_GLAD)
        message("================glad================")
        ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/glad/cmake ${THIRDPARTY_CONFIG_DIR}/glad)

        set(GG_LOCATION "${THIRDPARTY_CONFIG_DIR}/glad_gl_core_33/" CACHE STRING "GG_LOCATION" FORCE)
        glad_add_library(glad_gl_core_33 STATIC API gl:core=3.3)
    endif()
endif()

message("============@@##COMPLETE##@@============")
